# mixed-datatype-clustering

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  NOTICE  README.md  debug.ipynb  pyproject.toml
TCGA_Nextflow/: TCGA_README.md  download_maf.r  maftools_processing.r  main.nf  mixed_datatype_clustering.py  nextflow.config
TCGA_STAD_Nextflow/: analyze_results.ipynb  download_maf.r  maftools_processing.r  main.nf  mixed_datatype_clustering.py  nextflow.config  process_data.py  python_environment.yml  r_environment.yml
TCGA_STAD_Trials/: README.md
TCGA_STAD_Trials/data/: README.txt  data_prep_test.r  download_data.r  gene_enrichment.py  process_methyl.r  process_rna.r  run_data_process.ipynb  singscore_test.r  ssgsea_test.r
TCGA_STAD_Trials/trials/: run.py
covid_data/: data_10_05.csv
demo/: Cluster_Analysis.ipynb  binaryData_cleaned.txt  cancer_trials.py  kmodes_test.py  random_data.py  sparse_cluster_labels_4.csv  sparse_cluster_labels_5.csv  sparse_cluster_labels_6.csv  sparse_cluster_labels_7.csv  sparse_cluster_labels_8.csv  sparse_cluster_labels_gower.csv  sparse_cluster_labels_huang.csv  sparse_cluster_labels_podani.csv  sparse_cluster_labels_wishart.csv  sparse_feature_weights_4.csv  sparse_feature_weights_5.csv  sparse_feature_weights_6.csv  sparse_feature_weights_7.csv  sparse_feature_weights_8.csv  sparse_feature_weights_podani.csv  workbench.py
demo/cancer_data_results/: sparse_feature_weights_gower.csv  sparse_feature_weights_huang.csv  sparse_feature_weights_wishart.csv
demo/generated_data/: generated_data_labels.csv  generated_data_silhouette_and_ARI_scores.csv  generated_data_weights.csv  sparse_gower_distance_matrix_1.2.csv  sparse_gower_distance_matrix_1.4.csv  sparse_gower_distance_matrix_1.6.csv  sparse_gower_distance_matrix_1.8.csv  (+56 more)
sparsemedoid/: __init__.py  clustering.py  distfuncs.py  medoids.py  subfuncs.py
sparsemedoidtests/: __init__.py  unitTests.py
