[tool.poetry]
name = "sparsemedoid"
version = "0.1.0"
description = "K-Medoid clustering and feature selection for mixed datatypes"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/jmontmaxwell/sparse-kmedoids"
keywords=["PAM", "k-medoids", "mixed-datatypes", "sparse"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.1.1"
pandas = "^1.4.2"
numpy = "^1.22.4"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
