[tool.poetry]
name = "sparsemedoid"
version = "0.1.0"
description = "K-Medoid clustering and feature selection for mixed datatypes"
authors = ["J Montgomery Maxwell <jmontmaxwell@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/jmontmaxwell/sparse-kmedoids"
keywords=["PAM", "k-medoids", "mixed-datatypes", "sparse"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.2.1"
pandas = "^1.5.1"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
